fixed overFlow

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body{
     text-align: right;
     color: #ffffff;
     border: none;
+    overflow:hidden;
 }
 
 .button{
